--- a/lesson_3_task_1_2_3_mongoDB.ipynb
+++ b/lesson_3_task_1_2_3_mongoDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs_hh = db.hh\n",
-    "jobs_sj = db.sj"
+    "jobs_hh = db.hh"
    ]
   },
   {
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +124,7 @@
        "       18, 19, 20])"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 407,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +248,9 @@
     "        else:\n",
     "            salary_all = np.nan\n",
     "            currency = np.nan  \n",
-    "\n",
+    "            \n",
+    "            \n",
+    "        # Задание 3\n",
     "        # Использовал try для исключение одинаковых id по вакансиям. \n",
     "        # есдинсвенную ошибку могу поймать если _id уже существует\n",
     "        # И при новом запуске я добавляю вакансии которых еще нет у меня остальные не добалсяются \n",
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -290,32 +291,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Задание 2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите количество ЗП: 500000\n"
+      "Введите ЗП: 230000\n"
      ]
     }
    ],
    "source": [
-    "my_salary = int(input('Введите количество ЗП: '))"
+    "my_salary = int(input('Введите ЗП: '))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -330,6 +331,86 @@
       " 'min_salary': 200000.0,\n",
       " 'vacancion_name': 'Экспертпо продажам премиальной недвижимости',\n",
       " 'website': 'hh.ru'}\n",
+      "{'_id': '37853687',\n",
+      " 'city': 'Москва',\n",
+      " 'company': 'ООО Национальная Академия Современных Технологий г. Москва\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 450000.0,\n",
+      " 'min_salary': 70000.0,\n",
+      " 'vacancion_name': 'Менеджер отдела продаж',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37852822',\n",
+      " 'city': 'Москва',\n",
+      " 'company': 'ООО Ликвид\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 300000.0,\n",
+      " 'min_salary': 80000.0,\n",
+      " 'vacancion_name': 'Агент по недвижимости',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37661227',\n",
+      " 'city': 'Воронеж',\n",
+      " 'company': 'ООО Дом Для Вас\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 400000.0,\n",
+      " 'min_salary': 50000.0,\n",
+      " 'vacancion_name': 'Строитель-универсал',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '36649951',\n",
+      " 'city': 'Москва',\n",
+      " 'company': 'ООО ФИНЭКСПРЕСС\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 350000.0,\n",
+      " 'min_salary': 110000.0,\n",
+      " 'vacancion_name': 'Менеджер по продажам',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37516376',\n",
+      " 'city': 'Москва',\n",
+      " 'company': ' Охотный-Ряд на Никольской\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 250000.0,\n",
+      " 'min_salary': 75000.0,\n",
+      " 'vacancion_name': 'Риэлтор по аренде жилой недвижимости',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '35265979',\n",
+      " 'city': 'Санкт-Петербург',\n",
+      " 'company': ' АН Конкорд',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 300000.0,\n",
+      " 'min_salary': 60000.0,\n",
+      " 'vacancion_name': 'Менеджер по продажам',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37825770',\n",
+      " 'city': 'Москва',\n",
+      " 'company': 'ООО СМАРТ\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 300000.0,\n",
+      " 'min_salary': 100000.0,\n",
+      " 'vacancion_name': 'Автомеханик',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37821755',\n",
+      " 'city': 'Москва',\n",
+      " 'company': ' Артвелл\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 350000.0,\n",
+      " 'min_salary': 300000.0,\n",
+      " 'vacancion_name': 'Ведущий программист Java',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37821654',\n",
+      " 'city': 'Москва',\n",
+      " 'company': ' Sandow Fitness\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 300000.0,\n",
+      " 'min_salary': 60000.0,\n",
+      " 'vacancion_name': 'Менеджер фитнес-клуба по продажам',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37815069',\n",
+      " 'city': 'Москва',\n",
+      " 'company': ' АртегоФинанс\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': nan,\n",
+      " 'min_salary': 250000.0,\n",
+      " 'vacancion_name': 'Финансовый директор',\n",
+      " 'website': 'hh.ru'}\n",
       "{'_id': '35133202',\n",
       " 'city': 'Москва',\n",
       " 'company': ' Этажи, федеральная компания\\xa0',\n",
@@ -337,6 +418,126 @@
       " 'max_salary': 700000.0,\n",
       " 'min_salary': 120000.0,\n",
       " 'vacancion_name': 'Специалист по продаже недвижимости',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37807701',\n",
+      " 'city': 'Москва',\n",
+      " 'company': ' ЭстэйтЛига\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': nan,\n",
+      " 'min_salary': 250000.0,\n",
+      " 'vacancion_name': 'Менеджер по продажам недвижимости / Риелтор (стажер)',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37798819',\n",
+      " 'city': 'Волжск',\n",
+      " 'company': 'ООО МФ Система\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': nan,\n",
+      " 'min_salary': 250000.0,\n",
+      " 'vacancion_name': 'Начальник производства мебельной фабрики',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37798818',\n",
+      " 'city': 'Санкт-Петербург',\n",
+      " 'company': 'ООО МФ Система\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': nan,\n",
+      " 'min_salary': 250000.0,\n",
+      " 'vacancion_name': 'Начальник производства мебельной фабрики',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37798817',\n",
+      " 'city': 'Белгород',\n",
+      " 'company': 'ООО МФ Система\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': nan,\n",
+      " 'min_salary': 250000.0,\n",
+      " 'vacancion_name': 'Начальник производства мебельной фабрики',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37798816',\n",
+      " 'city': 'Волгодонск',\n",
+      " 'company': 'ООО МФ Система\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': nan,\n",
+      " 'min_salary': 250000.0,\n",
+      " 'vacancion_name': 'Начальник производства мебельной фабрики',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37798546',\n",
+      " 'city': 'Кострома',\n",
+      " 'company': 'ООО Домок\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 350000.0,\n",
+      " 'min_salary': 150000.0,\n",
+      " 'vacancion_name': 'Бригада строителей',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37798547',\n",
+      " 'city': 'Нижний Новгород',\n",
+      " 'company': 'ООО Домок\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 350000.0,\n",
+      " 'min_salary': 150000.0,\n",
+      " 'vacancion_name': 'Строительная бригада',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37798548',\n",
+      " 'city': 'Чебоксары',\n",
+      " 'company': 'ООО Домок\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 350000.0,\n",
+      " 'min_salary': 150000.0,\n",
+      " 'vacancion_name': 'Строительная бригада',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37798549',\n",
+      " 'city': 'Алексин',\n",
+      " 'company': 'ООО Домок\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 350000.0,\n",
+      " 'min_salary': 150000.0,\n",
+      " 'vacancion_name': 'Бригада строителей',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37798550',\n",
+      " 'city': 'Бронницы',\n",
+      " 'company': 'ООО Домок\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 350000.0,\n",
+      " 'min_salary': 150000.0,\n",
+      " 'vacancion_name': 'Бригада строителей',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '29832222',\n",
+      " 'city': 'Москва',\n",
+      " 'company': ' Mindbox\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 240000.0,\n",
+      " 'min_salary': 200000.0,\n",
+      " 'vacancion_name': 'C# разработчик (full-stack / back-end)',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '36317669',\n",
+      " 'city': 'Москва',\n",
+      " 'company': ' Mindbox\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': nan,\n",
+      " 'min_salary': 260000.0,\n",
+      " 'vacancion_name': 'C# разработчик/Техлид',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37790040',\n",
+      " 'city': 'Санкт-Петербург',\n",
+      " 'company': ' Рускол, АН\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 260000.0,\n",
+      " 'min_salary': 70000.0,\n",
+      " 'vacancion_name': 'Менеджер по продаже строящейся недвижимости (новостроек)',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37160613',\n",
+      " 'city': 'Санкт-Петербург',\n",
+      " 'company': 'ООО Первый Дом\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 300000.0,\n",
+      " 'min_salary': 85000.0,\n",
+      " 'vacancion_name': 'Менеджер по продажам строящейся недвижимости',\n",
+      " 'website': 'hh.ru'}\n",
+      "{'_id': '37248000',\n",
+      " 'city': 'Казань',\n",
+      " 'company': ' Агентство недвижимости Ключ\\xa0',\n",
+      " 'currency': 'руб.',\n",
+      " 'max_salary': 350000.0,\n",
+      " 'min_salary': 80000.0,\n",
+      " 'vacancion_name': 'Менеджер по продаже недвижимости',\n",
       " 'website': 'hh.ru'}\n"
      ]
     }
@@ -344,6 +545,13 @@
    "source": [
     "for i in jobs_hh.find( {'$or': [ { 'max_salary': { '$gt': my_salary } }, { 'min_salary':{'$gt':my_salary}} ] }):\n",
     "    pprint(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### к SuperJob возвращаться даже не хочу, все то что было написано раньше, по нему, полностью обнулилось и ошибка на ошибке "
    ]
   },
   {
